--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,12 @@ body {
     height: 200px;
 }
 
+           .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: #676464;
+                font-family: sans-serif;
+                padding-top: 70;
+                padding-left: 20;
+                padding-right: 20;
+            }
